lint: apply eclipse formatter